kubernetes/deployments.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mavencraft-creative
  labels:
    app: mavencraft-creative
spec:
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  replicas: 0
  template:
    metadata:
      labels:
        app: mavencraft-creative
    spec:
      terminationGracePeriodSeconds: 1
      securityContext:
        fsGroup: 1000
      volumes:
      - name: world
        persistentVolumeClaim:
          claimName: creative-world
      - name: map
        persistentVolumeClaim:
          claimName: creative-map
      nodeSelector:
        failure-domain.beta.kubernetes.io/zone: us-west-2b
      containers:
      - name: minecraft-game-server
        volumeMounts:
        - mountPath: /home/app/world
          name: world
        - mountPath: /home/app/map
          name: map
        image: mavencraft:latest
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "32000Mi"
            cpu: "32000m"
        imagePullPolicy: IfNotPresent
        workingDir: /home/app
        ports:
        - name: minecraft-port
          containerPort: 25565
        - name: mavencraft-port
          containerPort: 25566
        command: ["bash", "scripts/minecraft.sh", "32000M", "mavencraft", "25565", "25566", "/home/app/cache/craftbukkit-1.14.4-R0.1-SNAPSHOT.jar", "creative"]
        #command: ["sleep", "infinity"]
      - name: world-map-generator
        volumeMounts:
        - mountPath: /home/app/world
          name: world
        - mountPath: /home/app/map
          name: map
        image: mavencraft:latest
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "32000Mi"
            cpu: "32000m"
        imagePullPolicy: IfNotPresent
        workingDir: /home/app
        command: ["bash", "scripts/overviewer-run.sh", "4"]
        #command: ["sleep", "infinity"]
      - name: static-web-server
        image: mavencraft:latest
        imagePullPolicy: IfNotPresent
        ports:
        - name: http-port
          containerPort: 8080
        readinessProbe:
          httpGet:
            path: /
            port: http-port
        livenessProbe:
          httpGet:
            path: /
            port: http-port
        workingDir: /home/mavencraft
        command: ["ruby", "-run", "-ehttpd", "map", "-p8080", "-b0.0.0.0"]
        #command: ["sleep", "infinity"]
        volumeMounts:
        - name: map
          mountPath: /home/mavencraft/map
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mavencraft-console
  labels:
    app: mavencraft-console
spec:
  revisionHistoryLimit: 1
  strategy:
    type: Recreate
  replicas: 0
  template:
    metadata:
      labels:
        app: mavencraft-console
    spec:
      terminationGracePeriodSeconds: 1
      securityContext:
        fsGroup: 1000
      containers:
      - name: mavencraft-console
        image: mavencraft:latest
        resources:
          requests:
            memory: "1000Mi"
            cpu: "1000m"
          limits:
            memory: "32000Mi"
            cpu: "32000m"
        imagePullPolicy: IfNotPresent
        workingDir: /home/app
        command: ["sleep", "infinity"]
